# district_selection

./: README.md  districts.json  intersting_district_list.json  pyproject.toml
data_extraction/: atlanta_regional_commission_extractor.py  district_history.py  extract_district_history.py
district_analysis/: analysis.py
source_data/ballotpedia_information/: district_1.md  district_10.md  district_100.md  district_101.md  district_102.md  district_103.md  district_104.md  district_105.md  district_106.md  district_107.md  district_108.md  district_109.md  district_11.md  district_110.md  district_111.md  district_113.md  district_114.md  district_115.md  district_116.md  district_117.md  district_118.md  district_119.md  district_12.md  district_120.md  district_121.md  district_122.md  district_123.md  district_124.md  district_125.md  district_126.md  district_127.md  district_128.md  district_129.md  district_13.md  district_130.md  district_131.md  district_132.md  district_133.md  district_134.md  district_135.md  (+139 more)
source_data/district_reports/: district_44.md  district_45.md  district_46.md  district_48.md  district_53.md  district_56.md
